--- a/namukkun-project/public/index.html
+++ b/namukkun-project/public/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/namukkun.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <meta property="og:image" content="%PUBLIC_URL%/namukkun.svg" />
+    <meta property="og:site_name" content="Hanmadi" />
+    <meta property="og:description" content="지역을 바꾸는 용기있는 한마디" />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
