Design: 로고 png로 바꿈

--- a/namukkun-project/public/index.html
+++ b/namukkun-project/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/namukkun.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/namukkun.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <meta property="og:image" content="%PUBLIC_URL%/namukkun.svg" />
+    <meta property="og:image" content="%PUBLIC_URL%/namukkun.png" />
     <meta property="og:site_name" content="Hanmadi" />
     <meta property="og:description" content="지역을 바꾸는 용기있는 한마디" />
 
